syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/brocaar/loraserver/api/common/common.proto";
import "github.com/brocaar/loraserver/api/gw/gw.proto";


enum RXWindow {
	RX1 = 0;
	RX2 = 1;
}

message UplinkFrameLog {
    // TX information of the uplink.
    gw.UplinkTXInfo tx_info = 1;

    // RX information of the uplink.
    repeated UplinkRXInfo rx_info = 2;

    // LoRaWAN PHYPayload.
    string phy_payload_json = 3 [json_name = "phyPayloadJSON"];
}

message DownlinkFrameLog {
    // TX information of the downlink.
    DownlinkTXInfo tx_info = 1;

    // LoRaWAN PHYPayload.
    string phy_payload_json = 2 [json_name = "phyPayloadJSON"];
}

// This is a copy of gw.UplinkRXInfo with the only change that the
// gateway_id is of type string so that we can return it as HEX encoded
// instead of base64.
message UplinkRXInfo {
    // Gateway ID.
    string gateway_id = 1;

    // RX time (only set when the gateway has a GPS module).
    google.protobuf.Timestamp time = 2;

    // RX time since GPS epoch (only set when the gateway has a GPS module).
    google.protobuf.Duration time_since_gps_epoch = 3;

    // Gateway internal timestamp.
    uint32 timestamp = 4;

    // RSSI.
    int32 rssi = 5;

    // LoRa SNR.
    double lora_snr = 6;

    // Channel.
    uint32 channel = 7;

    // RF Chain.
    uint32 rf_chain = 8;

    // Board.
    uint32 board = 9;

    // Antenna.
    uint32 antenna = 10;

    // Location.
    gw.Location location = 11;
}

// Same comment as above applies to this message.
message DownlinkTXInfo {
    // Gateway ID.
    string gateway_id = 1;

    // Frame must be sent immediately.
    bool immediately = 2;

    // Emit frame at the given time since GPS epoch.
    google.protobuf.Duration time_since_gps_epoch = 3;

    // Emit the frame at the given gateway internal timestamp.
    uint32 timestamp = 4;

    // TX frequency (in Hz).
    uint32 frequency = 5;

    // TX power (in dBm).
    int32 power = 6;

    // Modulation.
    common.Modulation modulation = 7;

    oneof modulation_info {
        // LoRa modulation information.
        gw.LoRaModulationInfo lora_modulation_info = 8;

        // FSK modulation information.
        gw.FSKModulationInfo fsk_modulation_info = 9;
    }

    // The board identifier for emitting the frame.
    uint32 board = 10;

    // The antenna identifier for emitting the frame.
    uint32 antenna = 11;
}
